--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_order.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_my_order.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
@@ -23,6 +24,17 @@
         app:tabIndicatorHeight="3dp"
         app:tabTextAppearance="@style/TabStyle"
         />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@color/colorBackground"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- 你的View放在这里 -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/shadow" />
+    </RelativeLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/tab_viewpager"
         android:layout_width="match_parent"
