--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_card_info.xml
@@ -7,24 +7,12 @@
     android:orientation="vertical"
     tools:context=".CardInfoActivity">
 
-    <android.support.v7.widget.Toolbar
+    <com.citiexchangeplatform.pointsleague.TitleBar
         android:id="@+id/toolbar_card_info"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme">
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/textView_history_exchange_card_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:gravity="end"
-            android:text="历史兑换记录" />
-    </android.support.v7.widget.Toolbar>
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,36 +21,113 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView_card_info"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="20dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/store_card" />
+                android:layout_height="130dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="0dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                app:cardCornerRadius="14dp"
+                app:cardElevation="3dp"
+                app:cardPreventCornerOverlap="false">
 
-            <LinearLayout
+                <RelativeLayout
+                    android:id="@+id/relative_card_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:background="@drawable/circle"
+                            android:id="@+id/imageView_card_info"
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:scaleType="centerInside"
+                            android:layout_marginStart="20dp"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/nike_logo" />
+
+                        <TextView
+                            android:id="@+id/textView_name_card_info"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="28dp"
+                            android:textSize="22sp"
+                            android:textColor="@color/colorWhite"
+                            android:text="XXXXXXX" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textView_account2_card_info"
+                        android:layout_marginTop="80dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0000-0000-0000-0000"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorWhite"/>
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="130dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                app:cardCornerRadius="14dp"
+                app:cardElevation="3dp"
+                app:cardPreventCornerOverlap="false">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="90dp"
+                        android:layout_centerHorizontal="true"
+                        android:text="使用时，出示此码"
+                        android:textSize="18sp"/>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"> <!--100 270-->
+            <LinearLayout
+                android:background="@drawable/card_info_bg"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
                 android:layout_margin="20dp"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
+                android:paddingTop="50dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/rectangle"
-                    android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="积分" />
+                        android:text="积分"
+                        android:textStyle="bold"
+                        android:textSize="18sp"/>
 
                     <TextView
                         android:id="@+id/textView_points_card_info"
@@ -70,22 +135,30 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="0" />
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="#E4DDDDDD"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/rectangle"
-                    android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="可兑换通用点" />
+                        android:text="可兑通用点"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/textView_exchange_points_card_info"
@@ -93,64 +166,103 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
-                        android:text="0" />
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="#E4DDDDDD"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/rectangle"
-                    android:orientation="horizontal"
-                    android:padding="20dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="会员卡号/手机号" />
+                        android:text="会员卡"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/textView_account_card_info"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:gravity="end"
-                        android:text="00000000" />
+                        android:text="0000-0000-0000"
+                        android:textStyle="bold"
+                        android:textSize="14sp" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="#E4DDDDDD"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/rectangle"
-                    android:orientation="vertical"
-                    android:padding="20dp">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="使用规则" />
+                        android:text="使用规则"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/textView_description_card_info"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="- -" />
+                        android:gravity="end"
+                        android:text=">"
+                        android:textStyle="bold"
+                        android:textSize="18sp" />
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="#E4DDDDDD"/>
+
+                <android.support.v7.widget.CardView
+                    android:layout_gravity="center_horizontal"
+                    app:cardBackgroundColor="#FF8225"
+                    android:layout_marginTop="15dp"
+                    android:layout_width="140dp"
+                    android:layout_height="34dp"
+                    app:cardCornerRadius="17dp"
+                    app:cardElevation="3dp"
+                    app:cardPreventCornerOverlap="false">
+                    <Button
+                        android:id="@+id/button_unbind_card_info"
+                        android:background="@null"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="解除绑定"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorWhite"/>
+                </android.support.v7.widget.CardView>
+
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button_unbind_card_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/rectangle"
-                android:text="解除绑定" />
-        </LinearLayout>
-    </ScrollView>
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
