--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_detail_find_pay.xml
@@ -46,8 +46,8 @@
                     <TextView
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="30dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:id="@+id/textView_description_detail_find_pay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -61,8 +61,8 @@
                         android:orientation="vertical"
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="30dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <LinearLayout
@@ -88,30 +88,55 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent">
                                     <Button
+                                        android:id="@+id/button_minus_detail_find_pay"
                                         android:layout_width="30dp"
                                         android:layout_height="match_parent"
-                                        android:background="@null"
-                                        android:text="-"
-                                        android:textSize="24sp"/>
+                                        android:background="@drawable/ic_minus_black_24dp"/>
                                     <TextView
+                                        android:layout_marginStart="10dp"
+                                        android:layout_marginEnd="10dp"
+                                        android:id="@+id/textView_number_detail_find_pay"
                                         android:layout_gravity="center_vertical"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="2"
+                                        android:text="1"
+                                        android:inputType="number"
                                         android:textSize="24sp"/>
                                     <Button
-                                        android:layout_width="40dp"
+                                        android:id="@+id/button_add_detail_find_pay"
+                                        android:layout_width="30dp"
                                         android:layout_height="match_parent"
-                                        android:background="@null"
-                                        android:text="+"
-                                        android:textSize="24sp"/>
+                                        android:background="@drawable/ic_add_black_24dp"
+                                        />
                                 </LinearLayout>
                             </FrameLayout>
                         </LinearLayout>
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@color/colorUnable"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="40dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginBottom="20dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="所需通用点"
+                            android:textColor="#858585"
+                            android:textSize="20sp" />
+                        <TextView
+                            android:id="@+id/textView_total_detail_find_pay"
+                            android:gravity="end"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="XX.XXP"
+                            android:textColor="@color/colorLightOrange"
+                            android:textSize="20sp"/>
                     </LinearLayout>
 
                     <TextView
@@ -162,6 +187,7 @@
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp">
                 <ImageView
+                    android:id="@+id/imageView_detail_find_pay"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/loading_card"
